Fix accent gap

--- a/css/custom.css
+++ b/css/custom.css
@@ -130,11 +130,11 @@ blockquote {
     font-weight: bold;
     font-size: 1.7rem;
     line-height: 45px;
-    
+
     color: #333333;
 }
 
-.header a.logo.accent {
+.header a.logo span.accent {
     color: #ebebeb;
 }
 
